--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "use-client": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
