--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.11.1",
+    "firebase": "^10.12.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-router-dom": "^6.23.0",
+    "tools": "^0.0.0",
     "use-client": "^1.2.0"
   },
   "devDependencies": {
